<resources>
    <string name="app_name">Rides</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Navigation bar -->
    <string name="nav_rides">Rides</string>
    <string name="nav_car">Car</string>
    <string name="nav_comapany">Company</string>
    <string name="nav_import_export">Import/Export</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_adaptation">Adaptation</string>
    <string name="nav_feedback">Feedback</string>

    <!-- Edit Activity -->
    <string name="title_activity_add_ride">Add a Ride</string>
    <string name="title_activity_edit_ride">Edit a Ride</string>
    <string name="start_ride">Ride start</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="work_stay">Work stay</string>
    <string name="end_ride">Ride end</string>
    <string name="city">City</string>
    <string name="place_of_work">Place of work</string>
    <string name="purpuse_of_the_ride">Purpuse of the ride</string>
    <string name="distance">Distance</string>
    <string name="distance_unit">km</string>
    <string name="combined">Combined</string>
    <string name="notes">Notes</string>
    <string name="write_your_notes">Write your notes</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="editor_insert_ride_failed">Error with saving ride</string>
    <string name="editor_insert_ride_successful">Ride saved</string>
    <string name="empty_view_title_text">No ride…</string>
    <string name="empty_view_subtitle_text">Get started by adding a ride</string>
    <string name="editor_update_ride_failed">Error with editing ride</string>
    <string name="editor_update_ride_successful">Ride edited</string>
    <string name="editor_delete_pet_successful">Ride deleted</string>
    <string name="editor_delete_pet_failed">Error with deleting ride</string>
    <string name="delete_dialog_msg">Delete this ride?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_all">Delete All Rides</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="all_rows_deleted">rows deleted</string>

    <!-- Settings Car Activity -->
    <string name="car_activity_title">Car</string>
    <string name="settings_menu_item">Settings</string>
    <string name="car_settings_title">Car Settings</string>

    <string name="car_settings_brand">Brand</string>
    <string name="car_settings_brand_key" translatable="false">brand</string>
    <string name="car_settings_brand_default" translatable="false">Škoda</string>

    <string name="car_settings_business_name">Business name</string>
    <string name="car_settings_business_name_key" translatable="false">business_name</string>
    <string name="car_settings_business_name_default" translatable="false">Superb</string>

    License plate number
    <string name="car_settings_license_plate_number">License plate number</string>
    <string name="car_settings_license_plate_number_key" translatable="false">license_plate_number</string>
    <string name="car_settings_license_plate_number_default" translatable="false">AA000AA</string>


    <string name="title_activity_editor">EditorActivity</string>
    <string name="title_activity_settings_car">Settings</string>

    <!-- Strings related to Settings -->
    <string name="edit_car_menu">Edit car</string>
    <string name="company_settings_title">Company</string>
    <string name="edit_company_menu">Edit company</string>

    <!-- Company Edit -->
    <string name="company_settings_company">Company</string>
    <string name="company_settings_company_key" translatable="false">company</string>
    <string name="company_settings_company_default" translatable="false">ABC</string>

    <string name="company_settings_city">City</string>
    <string name="company_settings_city_key" translatable="false">city</string>
    <string name="company_settings_city_default" translatable="false">Bratislava</string>

    <string name="company_settings_postal_code">Postal Code</string>
    <string name="company_settings_postal_code_key" translatable="false">postal_code</string>
    <string name="company_settings_postal_code_default" translatable="false">000 00</string>

    <string name="company_settings_street">Street</string>
    <string name="company_settings_street_key" translatable="false">street</string>
    <string name="company_settings_street_default" translatable="false">Hlavná</string>

    <string name="company_settings_hause_number">Hause number</string>
    <string name="company_settings_hause_number_key" translatable="false">hause_number</string>
    <string name="company_settings_hause_number_default" translatable="false">1</string>

    <string name="company_settings_ico">ICO</string>
    <string name="company_settings_ico_key" translatable="false">ico</string>
    <string name="company_settings_ico_default" translatable="false">00000000</string>

    <string name="company_settings_dic">DIC</string>
    <string name="company_settings_dic_key" translatable="false">dic</string>
    <string name="company_settings_dic_default" translatable="false">0000000000</string>

    <string name="error_with_add_ride">Please add Start and End city</string>
    <string name="in_develop">In develop!</string>
</resources>
