<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rides"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/nav_rides" />
        <item
            android:id="@+id/nav_car"
            android:icon="@drawable/ic_directions_car_black_24dp"
            android:title="@string/nav_car" />
        <item
            android:id="@+id/nav_company"
            android:icon="@drawable/ic_business_black_24dp"
            android:title="@string/nav_comapany" />
        <item
            android:id="@+id/nav_import_export"
            android:icon="@drawable/ic_import_export_black_24dp"
            android:title="@string/nav_import_export" />
    </group>

    <item android:title="@string/nav_adaptation">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback_black_24dp"
                android:title="@string/nav_feedback" />
        </menu>
    </item>

</menu>
